--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 #-------------------------------
 # Site Settings
-title: Pudim Perfeito 🍮
+title: Pudim Perfeito
 logo: "https://i1.wp.com/pudimperfeito.50x.com.br/images/logo.png?resize=135,50" # You can add own logo. For example '/images/logo.png'.
 description: Gean Ramos personal blogging theme for Jekyll
 baseurl: "" # the subpath of your site, e.g. /blog
