--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ social:
 # Hero Settings
 hero:
   hero__title: Pudim Perfeito: Mais que uma Sobremesa
-  hero__description: Descubra receitas, dicas e truques para preparar o pudim dos seus sonhos! Do clássico ao gourmet, explore um universo de sabores e texturas que vão te conquistar
+  hero__description: Designs, talks, and writes about web, ethics, privacy, and dev. I share design tutorials, free resources and inspiration.
   hero__image: 'https://i0.wp.com/pudimperfeito.50x.com.br/images/pudim-top.jpg?resize=554,312'
 
 
