--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 #-------------------------------
 # Site Settings
-title: Pudim Perfeito - v24021600
+title: Pudim Perfeito
 logo: "https://i1.wp.com/pudimperfeito.50x.com.br/images/logo-pudim-perfeito.png?resize=200,77" # You can add own logo. For example '/images/logo.png'.
 description: Doce Pecado que te Leva ao Paraíso
 baseurl: "" # the subpath of your site, e.g. /blog
