--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ social:
 hero:
   hero__title: Pudim Perfeito
   hero__description: Descubra receitas, dicas e truques para preparar o pudim dos seus sonhos! Do clássico ao gourmet, explore um universo de sabores e texturas que vão te conquistar.
-  hero__image: 'https://i0.wp.com/pudimperfeito.50x.com.br/images/pudim2-top.jpg?resize=554,312'
+  hero__image: 'https://i0.wp.com/pudimperfeito.50x.com.br/images/03.jpg?resize=554,312'
 
 
 #-------------------------------
