--- a/_config.yml
+++ b/_config.yml
@@ -94,6 +94,7 @@ permalink: /:title
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
+  - kramdown-parser-gfm
 
 paginate: 9
 paginate_path: "/page/:num"
