--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 # Site Settings
 title: Pudim Perfeito
 logo: "https://i1.wp.com/pudimperfeito.50x.com.br/images/logo-pudim-perfeito.png?resize=200,77" # You can add own logo. For example '/images/logo.png'.
-description: Doce Pecado que te Leva ao Paraíso
+description: Seja bem-vindo ao Pudim Perfeito, o seu portal para um universo de delícias cremosas e irresistíveis!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://pudimperfeito.50x.com.br" # the base hostname & protocol for your site, e.g. http://example.com
-cdnurl: "https://i2.wp.com/drive.50x.com.br/pudimperfeito" # the base hostname & protocol for your site, e.g. http://example.com
+cdnurl: "https://i2.wp.com/drive.50x.com.br/pudimperfeito" # the base hostname & protocol for your site, e.g. http://cdn.example.com
 color_scheme: auto # You can choose three modes auto, light, and dark. By default, the auto mode is set, which means the user can choose the light or dark mode themself.
 
 
