--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,8 @@ permalink: /:title
 plugins:
   - jekyll-paginate
   - jekyll-sitemap
-  - kramdown-parser-gfm
+  - jekyll-feed
+  - jekyll-seo-tag
 
 paginate: 9
 paginate_path: "/page/:num"
